--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 .container {
+    width: 80%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -60,10 +61,10 @@ h1 {
 
 .game {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 10px;
-    width: 800px;
+    width: 90%;
     height: 500px;
 }
 
@@ -88,7 +89,9 @@ h1 {
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
-    transition: transform 0.25s;
+    transition: transform 0.5s ease-in-out;
+    border-radius: 5px;
+    font-size: 1r;
 }
 
 .front-face {
@@ -114,4 +117,10 @@ h1 {
 
 .item.boxMatch .back-face {
     transform: rotateY(0deg);
+}
+
+@media (max-width: 768px) {
+    .face{
+        font-size: 1rem;
+    }
 }
